# ids.moe

./: .editorconfig  .env.example  .env.preset  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  NOTICE.md  README.md  USAGE.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  lefthook.yml  pyproject.toml  shell.nix  vercel.json  wrangler.jsonc
.github/workflows/: buildv3.yaml  generator.yaml
api/: SCHEMA.md  __main__.py  go.mod  index.go  index.py  package.json  pnpm-lock.yaml  robots.txt  schema.json  status.json  wrangler.jsonc
api/assets/: schema.json
api/src/: analytics.ts  auth.ts  config.ts  index.ts  kv.ts  router.ts  schema.d.ts  types.ts  utils.ts
api/src/handlers/: apikey.ts  platform.ts  redirect.ts  status.ts
api/test/: index.spec.ts
frontend/: astro.config.mjs  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
frontend/src/components/: GithubIcon.astro  ThemeIcon.astro  UserDashboard.astro
frontend/src/layouts/: SiteLayout.astro
frontend/src/lib/: apiClient.ts
frontend/src/pages/: dashboard.astro  docs.astro  index.astro  login.astro  register.astro
frontend/src/styles/: global.css
generator/: __init__.py  __main__.py  anime_record.py  cache_downloader.py  clock.py  cloudflare_kv.py  combiner.py  const.py  converter.py  data_extractor.py  data_matcher.py  data_operations.py  dialect.py  downloader.py  dumper.py  fetcher.py  incremental_kv_ingest.py  kaize.py  kv_ingest.py  main.py  models.py  nautiljon.py  otakotaku.py  pipeline.py  prettyprint.py  schema.py  status_updater.py  utils.py
