[project]
name = "animeapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "fake-useragent>=2.2.0",
    "flask>=3.1.1",
    "fuzzywuzzy>=0.18.0",
    "joblib>=1.5.1",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "python-slugify>=8.0.4",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
